* Mon Nov 02 2015 Ding-Yi Chen <dchen at redhat.com> - 2.4.3
- Enhancement:
  * cmake-fedora-pkgdb: New script: pkgdb helper script.
  * cmake-fedora-zanata: New script: zanata helper script.
- Fixed:
  * Resolves: RHBZ 1194797: find -printf is not portable
- Changed:
  * Support zanata-server and zanata-client 3.7.
  * Add additional path to cmake-fedora.conf
  * cmake-fedora.conf: Remove bodhi branch, 
    use whatever cmake-fedora-pkgdb found. 
  * ManageFile: New function: MANAGE_FILE_COMMON_DIR
  * ManageString: Macro to function: STRING_UNQUOTE
  * koji-build-scratch: Use fedpkg backend instead
  * cmake-fedora-fedpkg: Fix 

* Thu Dec 11 2014 Ding-Yi Chen <dchen at redhat.com> - 2.3.4
- Fixed RHBZ 1144906 - cmake-fedora failed to build target pot_files if the .pot file not exists.
- ManageDependency: Now able to assign multiple PKG_CONFIG files.
- ManageGConf: Added "Variables to cache".
- cmake-fedora.conf: el7 and fc21 is now available in bodhi.
- ManageRPMScript: Fixed the mo file handling.
- ManageZanata: Use /usr/share/locale as SYSTEM_LOCALE source instead.

* Mon Sep 22 2014 Ding-Yi Chen <dchen at redhat.com> - 2.3.1
- Fixed RHBZ 1144906 - cmake-fedora failed to build target pot_files if the .pot file not exists.
- ManageDependency: var_CFLAGS and var_LIBS are also cached.
- ManageDependency: var_INCLUDEDIR also includes directories from var_CFLAGS.
- ManageGConf: Added "Variables to cache".
- cmake-fedora.conf: el7 and fc21 is now available in bodhi.

* Tue Aug 26 2014 Ding-Yi Chen <dchen at redhat.com> - 2.3.0
- cmake-fedora-fedpkg: fix try_command
- ManageChangeLogScript: New command "make"

* Mon Aug 25 2014 Ding-Yi Chen <dchen at redhat.com> - 2.2.1
- ManageEnvironmentCommon: Module of variable for both normal and script mode.
- ManageDependency: Make changes suitable for more generic *nix build.
    e.g. FEDORA_NAME -> PACKAGE_NAME
- ManageZanata: MANAGE_ZANATA: New option CLEAN_ZANATA_XML.
- Workaround for Bug 1115136, otherwise el7 won't work.
