@@ -162,6 +162,11 @@ FUNCTION(RELEASE_NOTES_READ_FILE)
 
     PRJ_INFO_CMAKE_WRITE()
 
+    ADD_CUSTOM_TARGET(refresh_cmake_cache
+	COMMAND ${CMAKE_COMMAND} -E remove -f ${CMAKE_SOURCE_DIR}/CMakeCache.txt
+	COMMAND ${CMAKE_COMMAND} ${CMAKE_SOURCE_DIR}
+	)
+
     ADD_CUSTOM_TARGET(changelog
 	COMMAND ${CMAKE_COMMAND} -Dcmd=update 
 	-Dchangelog=${CHANGELOG_FILE}
@@ -173,5 +178,7 @@ FUNCTION(RELEASE_NOTES_READ_FILE)
 	DEPENDS ${RELEASE_NOTES_FILE}
 	COMMENT "changelog: ${CHANGELOG_FILE}"
 	)
+
+    ADD_DEPENDENCIES(changelog refresh_cmake_cache)
 ENDFUNCTION(RELEASE_NOTES_READ_FILE)
 
